<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_bishop"
        android:icon="@drawable/bishop"
        android:title="@string/bishop" />

    <item
        android:id="@+id/menu_king"
        android:icon="@drawable/king"
        android:title="@string/king"/>

    <item
        android:id="@+id/menu_knight"
        android:icon="@drawable/knight"
        android:title="@string/knight" />

    <item
        android:id="@+id/menu_pawn"
        android:icon="@drawable/pawn"
        android:title="@string/pawn"/>

    <item
        android:id="@+id/menu_queen"
        android:icon="@drawable/queen"
        android:title="@string/queen" />

    <item
        android:id="@+id/menu_rook"
        android:icon="@drawable/rook"
        android:title="@string/rook"/>

</menu>